# istots

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  README.md  TASK.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: windows-build.yml
packaging/inno/: istots_gui.iss
packaging/pyinstaller/: istots_gui.spec
scripts/: README.md  bench_batch.py  build_windows_gui.py  build_windows_installer.py  build_windows_portable_zip.py  export_furigana_debug_images.py  export_sup_images.py  smoke_windows_gui_bundle.py  update_windows_runtime_allowlist.README.md  update_windows_runtime_allowlist.py
scripts/image_compare_gui/: README.md
src/istots/: __init__.py  __main__.py  anchor_merge.py  atomic_writer.py  cli.py  corrector.py  derived_assets.py  detector.py  device.py  doctor.py  frozen_subprocess.py  furigana_mask.py  gemini_auth.py  gguf_support.py  gui_main.py  llama_mmproj.py  llama_runtime.py  llama_sampling.py  model_store.py  pipeline.py  runtime_diagnostics.py  runtime_prerequisites.py  runtime_stdio.py  srt_writer.py  sup_reader.py  text_diff.py  windows_build.py  windows_subprocess.py
src/istots/app/: __init__.py  auth.py  convert.py  (+4 more)
tests/: conftest.py  test_anchor_merge.py  test_app_auth.py  test_app_convert.py  test_app_doctor.py  test_app_materialize_mmproj.py  test_app_setup.py  test_app_smoke.py  test_atomic_writer.py  test_cli.py  test_corrector.py  test_device.py  test_doctor.py  test_export_furigana_debug_images.py  test_export_sup_images.py  test_frozen_subprocess.py  test_furigana_mask.py  test_gemini_auth.py  test_gguf_support.py  test_gui_bootstrap_windows.py  test_gui_core.py  test_gui_main.py  test_gui_qt_app.py  test_hf_backend.py  test_image_compare_gui.py  test_llama_mmproj.py  test_llama_runtime.py  test_llama_sampling.py  test_llama_server_backend.py  test_model_store.py  test_ocr_factory.py  test_packaging_contract.py  test_pgs_engine_assembly.py  test_pgs_engine_multi_window.py  test_pgs_engine_regression.py  test_pgs_engine_state_handling.py  test_pipeline_batch.py  test_runtime_diagnostics.py  test_runtime_prerequisites.py  test_runtime_stdio.py  (+6 more)
tools/image_compare_gui/: README.md  compare_images.py
(+18 files in other folders)
