[project]
name = "istots"
version = "0.1.0"
description = "SUP to SRT subtitle converter using OCR"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "oukeidos" }]
dependencies = [
    "huggingface-hub",
    "numpy>=1.26.0",
    "Pillow>=10.4.0",
    "torch>=2.6.0",
    "transformers>=5.0.0",
]

[project.scripts]
istots = "istots.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.8",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
