[project]
name = "istots"
version = "0.3.2"
description = "SUP to SRT subtitle converter using OCR"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "oukeidos" }]
dependencies = [
    "gguf @ git+https://github.com/ggml-org/llama.cpp@94ca829b6001019622c0f67fcd48e9ec6bd7dce8#subdirectory=gguf-py",
    "huggingface-hub",
    "keyring>=25.6.0",
    "numpy>=1.26.0",
    "Pillow>=10.4.0",
]

[project.optional-dependencies]
hf = [
    "torch>=2.6.0",
    "transformers>=5.0.0",
]

[project.scripts]
istots = "istots.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.8",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
