[project]
name = "istots"
version = "0.4.5"
description = "SUP to SRT subtitle converter using OCR"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "oukeidos" }]
dependencies = [
    "gguf==0.18.0",
    "huggingface-hub",
    "keyring>=25.6.0",
    "numpy>=1.26.0",
    "Pillow>=10.4.0",
]

[project.optional-dependencies]
hf = [
    "torch>=2.6.0",
    "transformers>=5.0.0",
]
gui = [
    "PySide6>=6.8.0",
]

[project.scripts]
istots = "istots.cli:main"
istots-gui = "istots.gui_main:main"

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
    "pyinstaller-hooks-contrib>=2026.3",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"
